src/components/Slices/components/Carousel/Carousel.scss
@import '../../../../scss/app';

.Slice.Slice-Carousel {
    width: 100vw !important;
    overflow-y: hidden;

    &.Index-0 {
        margin-top: -1rem;
        margin-bottom: -1.15rem;

        @media (max-width: 950px) {
            margin-top: -2rem;
        }
    }

    .Link {
        display: block;
        max-width: 100%;

        .Image {
            display: block;
            max-width: 100%;
        }
    }
}

